<resources>
    <string name="app_name">Mosis Priroda</string>
    <string name="login_button">Uloguj se</string>
    <string name="signup_button">Registruj se</string>
    <string name="register_button">Registruj se</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_email_edittext">Email</string>
    <string name="register_repeat_password">Repeat password</string>
    <string name="register_password">Password</string>
    <string name="register_phone">Phone number</string>
    <string name="register_username">Username</string>
    <string name="login_email_edittext">Email</string>
    <string name="login_password">Password</string>
    <string name="logout_item">Izloguj se</string>
    <string name="explore">Istraži</string>
    <string name="leaderboard">Rang lista</string>
    <string name="my_items">Moje stavke</string>
    <string name="filter">Filter</string>
    <string name="dodaj_objekat">Dodaj objekat</string>
    <string name="add_name">Naziv</string>
    <string name="add_latin_name">Latinski naziv</string>
    <string name="add_opis">Opis objekta</string>
    <string name="add_tezina">Kako doći</string>
    <string name="biljka">Biljka</string>
    <string name="gljiva">Gljiva</string>
    <string name="zivotinja">Životinja</string>
    <string name="filter_ime">Pretraga po imenu</string>
    <string name="filter_od">Od</string>
    <string name="filter_do">Do</string>
    <string name="filter_datum">Odaberi datum kreiranja</string>
    <string name="moje">Samo moji objekti</string>
    <string name="filter_radius">Radius u km</string>
    <string name="filter_tezina">Tezina dolaska</string>
    <string name="add_object_title">Dodaj objekat</string>
    <string name="register_title">Registracija</string>
    <string name="add_tezina_spinner">Tezina dolaska</string>
    <string name="add_tip_spinner">Odaberi tip</string>
    <string name="main_subtitle">Mosis priroda</string>
    <string name="main_title">Mapa</string>
    <string name="bubble_author">Autor: %1$s</string>
    <string name="bubble_opis">Opis: %1$s.</string>
    <string name="bubble_datum">Datum: %1$s</string>
    <string name="bubble_dolazak_kratak">Dolazak: %1$s</string>
    <string name="bubble_dolazak">Dolazak: %1$s - %2$s.</string>
    <string name="omiljeno">Samo omiljeni objekti</string>
    <string name="lead_title">Rang lista</string>
</resources>